RESOLVED FIXED296940
Fix internal builds
https://bugs.webkit.org/show_bug.cgi?id=296940
Summary Fix internal builds
Dawn Morningstar
Reported 2025-08-05 10:43:37 PDT
Builds are failing due to a deprication of CARenderServerRenderLayerWithTransform
Attachments
Dawn Morningstar
Comment 1 2025-08-05 10:43:38 PDT
Dawn Morningstar
Comment 2 2025-08-05 10:46:31 PDT
EWS
Comment 3 2025-08-05 11:01:12 PDT
Committed 298244@main (e3e7d0341356): <https://commits.webkit.org/298244@main> Reviewed commits have been landed. Closing PR #48962 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.