Fix internal builds https://bugs.webkit.org/show_bug.cgi?id=296940 rdar://157489774

Unreviewed build fix.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _takeViewSnapshot]):
(-[WKWebView _snapshotRectAfterScreenUpdates:rectInViewCoordinates:intoImageOfWidth:completionHandler:]):

Canonical link: https://commits.webkit.org/298244@main